修正所有的域名为ganshane.net

--- a/src/main/resources/lichen/components/AreaSelect.tml
+++ b/src/main/resources/lichen/components/AreaSelect.tml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
 	Copyright 2008 The OurIBA Develope Team. 
-	site: http://ouriba.com
+	site: http://ganshane.net
 	file : $Id: AreaSelect.tml 2025 2008-10-23 06:36:04Z d0ng $
 	created at:2008-09-16
 -->
