--- a/src/main/resources/lichen/components/CaptchaField.tml
+++ b/src/main/resources/lichen/components/CaptchaField.tml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
 	Copyright 2008 The OurIBA Develope Team. 
-	site: http://ouriba.com
+	site: http://ganshane.net
 	file : $Id: CaptchaField.tml 3420 2008-11-20 12:05:31Z d0ng $
 	created at:2008-09-24
 -->
