完成了智能查询的操作

--- a/src/main/resources/corner/components/CaptchaField.tml
+++ b/src/main/resources/corner/components/CaptchaField.tml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <t:container xmlns:t="http://tapestry.apache.org/schema/tapestry_5_1_0.xsd">
-    <input t:id="checkCodeField"  max="6" type="text" class="${inputValueClass}" style="margin-bottom:0;padding-bottom:0"/>
+    <input t:id="checkCodeField"  max="6" type="text" class="${inputValueClass}" autoComplete="false" style="margin-bottom:0;padding-bottom:0"/>
     <div class="captcha-code">
         <t:zone t:id="ccode" update="show" class="inline" style="margin-top:0;padding-top:0;display:inline">
             <t:delegate to="codeBlock"/>
