调整测试用例的错误

--- a/src/test/app1/Index.tml
+++ b/src/test/app1/Index.tml
@@ -13,7 +13,7 @@
 
     <ul>
         <li >
-            <t:pagelink page="StaticLinkDemo">静态链接测试页</t:pagelink>
+            <t:pagelink page="FckeditorDemo">Fckeditor测试页</t:pagelink>
         </li>
     </ul>
 
