修正事物的实现

--- a/src/test/app1/FckeditorDemo.tml
+++ b/src/test/app1/FckeditorDemo.tml
@@ -16,6 +16,7 @@
 				<t:label for="fckContent" />
 				<t:textarea  t:mixins="corner/fckeditor"		t:id="fckContent"  t:value="content"/>
 			</div>
+			<t:datefield value="date"/>
 		</div>
 
 	</t:form>
